--- a/Proyectos Acamica/01. CV/CVOnline/main.css
+++ b/Proyectos Acamica/01. CV/CVOnline/main.css
@@ -80,7 +80,12 @@ a {
 body {
       background: #f5f5f5;
     }
-    
+
+body.limte{
+  width: 80%;
+} 
+
+
 #encabezado {
   clear: both;
 }
@@ -102,6 +107,11 @@ body {
 
 }
 
+/*#contenidoprincipal.limite{
+  width: 70%;
+  widht-max:1500;
+}*/
+
 #contenidosecundario {
   width:60%;
   float: right;
@@ -109,6 +119,11 @@ body {
   margin-right: 5%;
 }
 
+/*#contenidosecundario.limite{
+  width: 30%;
+  widht-max:1500;
+}
+*/
 #seccion {
   background: #FFFFFF;
   color:#808080;
