CV Online ordenado

--- a/Proyectos Acamica/01. CV/CV_Extra/estilos.css
+++ b/Proyectos Acamica/01. CV/CV_Extra/estilos.css
@@ -1,9 +1,8 @@
-<!-- CSS desde CodePen
+/*<!-- CSS desde CodePen
   
   Fuente: https://codepen.io/_gwen2405/pen/rraWPX
 
--->
-<style>
+-->*/
   
   h1, h2, h3, h4, h5, p, a, ul, ol{
   margin: 0;
@@ -525,4 +524,3 @@ body{
       animation: fadeInUp .8s ease-in-out;
     }
     
-</style>
