--- a/Proyectos Acamica/01. CV/CVOnline/main.css
+++ b/Proyectos Acamica/01. CV/CVOnline/main.css
@@ -106,6 +106,34 @@ body.limte{
 }
 
 #seccion {
+  overflow: hidden;
+  background: #FFFFFF;
+  color:#808080;
+  margin: 2% 2% 2% 0%;
+  padding: 5px 10px 10px 10px;
+
+}
+
+#quiensoy {
+  overflow: hidden;
+  background: #FFFFFF;
+  color:#808080;
+  margin: 2% 2% 2% 0%;
+  padding: 5px 10px 10px 10px;
+
+}
+
+#formacion {
+  overflow: hidden;
+  background: #FFFFFF;
+  color:#808080;
+  margin: 2% 2% 2% 0%;
+  padding: 5px 10px 10px 10px;
+
+}
+
+#experiencia {
+  overflow: hidden;
   background: #FFFFFF;
   color:#808080;
   margin: 2% 2% 2% 0%;
@@ -114,12 +142,14 @@ body.limte{
 }
 
 #portfolio {
+  overflow: hidden;
   background: #FFFFFF;
   color:#808080;
   margin: 2% 2% 2% 0%;
   padding: 5px 10px 10px 10px;
 
 }
+
 
 #pie {
   clear: both;
