--- a/Proyectos Acamica/02. HomeBanking/recursos-home-banking/css/style.css
+++ b/Proyectos Acamica/02. HomeBanking/recursos-home-banking/css/style.css
@@ -21,6 +21,10 @@ body {
     vertical-align: text-bottom;
 }
 
+.card{
+    margin: center;
+}
+
 .align-left {
     display: flex;
     padding: 8px;
