--- a/Proyectos Acamica/01. CV/CVOnline/estilos.css
+++ b/Proyectos Acamica/01. CV/CVOnline/estilos.css
@@ -1,6 +1,5 @@
-
 * {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "lato", sans-serif;
 }
 
 a {
@@ -67,6 +66,24 @@ a {
   height: 96px;
 }
 
+ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f5f5f5;
+    text-align: center; 
+}
+
+li a {
+  color: blue;
+}
+
+li a:hover, li a:active, li a:focus {
+    background-color: #555;
+    color: white;
+}
+
 .titulo {
 	color:#2669ff;
   border-bottom: 2px solid gray;
@@ -79,12 +96,7 @@ a {
 body {
       background: #f5f5f5;
     }
-
-body.limte{
-  width: 80%;
-} 
-
-
+    
 #encabezado {
   clear: both;
 }
@@ -98,6 +110,15 @@ body.limte{
 
 }
 
+#perfil {
+	position: fixed;
+	width:20%;
+  	float: left;
+  	padding-top: .5%;
+  	margin-left: 5%;
+  	margin-right: 5%;
+}
+
 #contenidosecundario {
   width:60%;
   float: right;
@@ -106,7 +127,6 @@ body.limte{
 }
 
 #seccion {
-  overflow: hidden;
   background: #FFFFFF;
   color:#808080;
   margin: 2% 2% 2% 0%;
@@ -132,7 +152,7 @@ body.limte{
 
 }
 
-#experiencia {
+#experiencia  {
   overflow: hidden;
   background: #FFFFFF;
   color:#808080;
@@ -150,7 +170,6 @@ body.limte{
   padding-bottom: 20px;
 }
 
-
 #pie {
   clear: both;
   margin-top: 10%;
@@ -159,7 +178,6 @@ body.limte{
 .piefoto{
   text-align: center;
 }
-
 
 .col{
   height: 100px;
@@ -209,7 +227,6 @@ img {
   max-width: 70%;
   margin-bottom: 2%
   width: 50%;
-/*  border: 3px solid gray;*/
   padding: 10px;
   margin-bottom: 5%;
 }
@@ -228,4 +245,3 @@ ul li {
   padding: 20px 
   background: #c0c0c0;
 }
-
