--- a/Proyectos Acamica/01. CV/CVOnline/estilos.css
+++ b/Proyectos Acamica/01. CV/CVOnline/estilos.css
@@ -124,6 +124,7 @@ body {
   float: right;
   margin-top: 5%;
   margin-right: 5%;
+  margin-bottom: 40%;
 }
 
 #seccion {
@@ -132,6 +133,11 @@ body {
   margin: 2% 2% 2% 0%;
   padding: 5px 10px 10px 10px;
 
+}
+
+#fakequiensoy, #fakeformacion, #fakeexperiencia, #fakeportfolio {
+  padding-top: 3em;
+  background: #f5f5f5;
 }
 
 #quiensoy {
@@ -167,7 +173,7 @@ body {
   color:#808080;
   margin: 2% 2% 2% 0%;
   padding: 5px 10px 10px 10px;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
 }
 
 #pie {
