--- a/Proyectos Acamica/03. Rompecabezas/css/juego.css
+++ b/Proyectos Acamica/03. Rompecabezas/css/juego.css
@@ -55,6 +55,11 @@ li::before {
    display: block;
 }
 
+#objetivo img {
+     max-width: 100%;
+   display: block;
+}
+
 #titulo{
    letter-spacing: 10px;
    text-align: center;
@@ -67,7 +72,14 @@ li::before {
 
 }
 
-#instrucciones h1 {
+#instrucciones h2 {
+  color: #E84A5F;
+  margin: left;
+  font-size: 15px;
+  margin-top: 20px;
+}
+
+#movimientos h2 {
   color: #E84A5F;
   margin: left;
   font-size: 15px;
@@ -85,7 +97,7 @@ li::before {
 #juego {
   text-align: center;
   animation: fadein 2s;
-  background-color:white;
+  /*background-color:white;*/
   height: 600px;
   width: 600px;
   
@@ -93,6 +105,18 @@ li::before {
 
 #pieza1, #pieza2,#pieza3 #pieza4 #pieza5, #pieza6, #pieza7, #pieza8, #pieza9{
    max-height: 100%;
+}
+
+#footer div {
+  font-family: sans-serif;
+  background-color: grey;
+  color: white;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  padding:4% 4%;
+  text-align: center;
+  font-size: 12px;
 }
 
 
