--- a/Proyectos Acamica/03. Rompecabezas/css/juego.css
+++ b/Proyectos Acamica/03. Rompecabezas/css/juego.css
@@ -17,6 +17,7 @@ ul {
 li {
   padding: 5px 0;
   animation: fadein 5s;
+  text-align: left;
 }
 li::before {
   content: "• ";
@@ -34,6 +35,7 @@ li::before {
   display: table-cell;
   margin: 0;
   vertical-align: top;
+  max-height: 600px;
 }
 
 .col-60 {
@@ -44,8 +46,8 @@ li::before {
 }
 
 .piezasjuego {
-   width:33%;
-   height:33%;
+   width:33.33%;
+   height:33.33%;
    float: left;
    margin: 0px;
    padding: 0px;
@@ -74,8 +76,10 @@ li::before {
   margin: auto;
 }
 
-#exampleModalCenter {
-  display: none;
+#displayprincipal {
+margin-top: 5%;
+margin-left: 250px;
+margin-right: auto;
 }
 
 #objetivo img {
@@ -115,8 +119,7 @@ li::before {
 
 #juego {
   text-align: center;
-  animation: fadein 2s;
-  /*background-color:white;*/
+  animation: fadein 1s;
   height: 600px;
   width: 600px;
   
@@ -133,11 +136,10 @@ li::before {
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
-  padding:4% 4%;
+  padding:6% 6%;
   text-align: center;
   font-size: 12px;
 }
-
 
 @keyframes fadein {
   from { opacity: 0; }
